# peercities

./: .gitignore  README.md  counties_to_cbsa.py  datastructure.py  feature_engineering.py  load_from_raw.py  logging_config.json  model.py  peer_cities.py  pyproject.toml  raw_to_counties.py  reduction.py
prepped/1980/: cbsa_details_1980.csv  countes_with_details_1980.csv
raw/: test.py
src/: app_logger.py  datastructure.py  explore.py  feature_engineering.py  log_normal.py  model.py  raw_to_counties.py  reduction.py  weights.py
tests/: test_model.py
