[tool.poetry]
name = "peer-cities"
version = "0.1.0"
description = "A model for comparing CBSAs."
authors = ["mikevatd3 <mike@datadrivendetroit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
